--- a/src/Components/projects.css
+++ b/src/Components/projects.css
@@ -14,7 +14,7 @@
 .projectContainer {
   position: absolute;
   top: 150%;
-  left: 30%;
+  left: 28.5%;
   border-style: solid;
   border-width: 1px;
   border-color: rgb(255, 255, 255);
