--- a/src/Components/resumedownload.css
+++ b/src/Components/resumedownload.css
@@ -26,10 +26,13 @@
 
 @media all and (max-width: 500px) {
   .downloadBtn {
-    top: 45%;
-    left: 30%;
-    width: 9em;
-    height: 3em;
+    top: 5%;
+    left: 85%;
+    width: 5em;
+    height: 2em;
+    font-size: .8em;
+    position: fixed;
+    z-index: 1;
   }
 }
 
